--- a/DoubleTime/DoubleTime.csproj
+++ b/DoubleTime/DoubleTime.csproj
@@ -78,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\EnemyCursor.cs" />
     <Compile Include="Assets\Features\Hair\HairRenderer.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\GetSetAttribute.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Attributes\MinAttribute.cs" />
